# CPlusPlus

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md
.devcontainer/: devcontainer.json  dockerfile
docs/: README.md
docs/explanation/: build-system-and-environment.md  exceptions.md
docs/how-to/: add-new-project.md  build-and-run.md  run-static-analysis.md
docs/reference/: cmake-and-structure.md
docs/tutorials/: getting-started.md
include/: calculator.h
include/cpp_lab/: app.h  calculator.h
projects/calculator/: CMakeLists.txt
projects/calculator/include/: app.h  arithmetic.h
projects/calculator/src/: app.cpp  arithmetic.cpp  calculator.cpp  main.cpp
projects/cfr/: CMakeLists.txt
projects/cfr/docs/: README.md  background.md  cfr.md  flowchart.md  kuhn-poker.md  leduc-poker.md
projects/cfr/include/: cfr_solver.h  game.h  information_set.h  kuhn_demo.h  kuhn_trainer.h
projects/cfr/include/games/: kuhn_action.h  kuhn_card.h  kuhn_game.h  kuhn_state.h
projects/cfr/src/: information_set.cpp  kuhn_demo.cpp  kuhn_trainer.cpp  main.cpp
projects/cfr/src/games/: kuhn_game.cpp  kuhn_state.cpp
projects/try_catch/: CMakeLists.txt
projects/try_catch/include/: bank_account.h  exception_demos.h  insufficient_funds_error.h
projects/try_catch/src/: bank_account.cpp  exception_demos.cpp  insufficient_funds_error.cpp  main.cpp
scripts/: tidy.sh
src/: Main.cpp  app.cpp  calculator.cpp  main.cpp
src/cpp_lab/: app.cpp  calculator.cpp
